alb.tf
#############################################
# Application Load Balancer
#############################################

resource "aws_lb" "main" {

  name               = "${local.name_prefix}-alb"
  internal           = false
  load_balancer_type = "application"

  security_groups = [
    aws_security_group.alb.id
  ]

  subnets = aws_subnet.public[*].id

  enable_deletion_protection = false

  idle_timeout = 60

  tags = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-alb"
    }
  )

}

#############################################
# Target Group
#############################################

resource "aws_lb_target_group" "app" {

  name = "${local.name_prefix}-tg"

  port = var.container_port

  protocol = "HTTP"

  target_type = "ip"

  vpc_id = aws_vpc.main.id

  ###########################################
  # Health Check
  ###########################################

  health_check {

    enabled = true

    protocol = "HTTP"

    path = var.health_check_path

    matcher = "200"

    interval = 30

    timeout = 5

    healthy_threshold = 2

    unhealthy_threshold = 2

  }

  tags = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-tg"
    }
  )

}

#############################################
# HTTP Listener
#############################################

resource "aws_lb_listener" "http" {

  load_balancer_arn = aws_lb.main.arn

  port = 80

  protocol = "HTTP"

  default_action {

    type = "forward"

    target_group_arn = aws_lb_target_group.app.arn

  }

}

#############################################
# (Optional)
# HTTPS Listener
#
# Uncomment after creating an ACM Certificate
#############################################

# resource "aws_lb_listener" "https" {
#
#   load_balancer_arn = aws_lb.main.arn
#
#   port = 443
#
#   protocol = "HTTPS"
#
#   ssl_policy = "ELBSecurityPolicy-TLS13-1-2-2021-06"
#
#   certificate_arn = aws_acm_certificate.main.arn
#
#   default_action {
#
#     type = "forward"
#
#     target_group_arn = aws_lb_target_group.app.arn
#
#   }
#
# }

#############################################
# Outputs
#############################################

# ALB output declarations are centralized in outputs.tf

output "alb_zone_id" {

  value = aws_lb.main.zone_id

}
